# dotfiles

./: pkglist  qr_5hb4VG.sh
.doom.d/: config.el  custom.el  init.el  packages.el  summer.el
alacritty/: colors.yml  fonts.yml
bspwm/: bspwmrc  monitors.sh
dotfile_installer/: Cargo.toml  packages.json
dotfile_installer/scripts/: install_alacritty.sh  install_bspwm.sh  install_emacs.sh  install_fish.sh  install_neovim.sh  install_polybar.sh
dotfile_installer/src/: main.rs
dunst/: dunstrc
fish/: config.fish
nvim/: init.lua
nvim/lua/: key_bindings.lua  lsp.lua  neotree.lua  plugins.lua
nvim/plugin/: packer_compiled.lua
picom/: picom.conf  yxqsnz.conf  yxqsnz2.conf  yxqsnz3.conf
polybar/: config  config_monitor_2  modules
polybar/tests/: modules.toml
sxhkd/: sxhkdrc
