[package]
name = "dotfile_installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pkg_manager = "0.1.1" # my own crate lmao
serde_json = "1.0.79"
serde = { version = "1.0.79", features = ["derive"] }
